--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -22,7 +22,7 @@
         Or
       </div>
       <div>
-        <label for="uploadfile" class="ui upload icon small button">
+        <label for="uploadfile" class="ui upload link icon small button">
           <i class="file icon"></i>
           Choose file to upload
         </label>
