added preview message to data-format page

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,6 @@
 <div class="ui text container">
   <h3 class="first headroom">Data format</h3>
+  <p> <i> This is a small sample of the data for preview </i> </p>
   <div class="form-content">
     <div class="ui tiny message">
       <p> <span class="required"> * </span> indicates field is <b> required </b> to proceed </p>
