--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -8,25 +8,40 @@
   </div>
   <div class="content">
     <h3 class="first headroom">Welcome!</h3>
-    <p>
-      Provide link to data or upload data. (add information about accepted formats)
-    </p>
-    <div class="ui labeled input">
-      <div class="ui label">
-        URL
+    {{#with (changeset model DataURLValidator) as |changeset|}}
+      <p>
+        Provide link to data or upload data. (add information about accepted formats)
+      </p>
+      <div class="ui labeled input">
+        <div class="ui label">
+          URL
+        </div>
+          {{validated-input
+            propertyName="data_url"
+            placeholder="URL for hosted data"
+            changeset=changeset
+            showErrorState=showFormErrorState}}
       </div>
-      <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
-    </div>
-    <div class="ui horizontal divider">
-      Or
-    </div>
-    <div>
-      <label for="uploadfile" class="ui icon button">
-        <i class="file icon"></i>
-        Choose file to upload
-      </label>
-      <input type="file" id="uploadfile" style="display:none" onChange={{action "uploadFile"}}>{{fileName}}
-    </div>
-    {{nav-buttons sendChangeRoute="changeRoute" next="more-info"}}
+      <div class="ui horizontal divider">
+        Or
+      </div>
+      <div>
+        <label for="uploadfile" class="ui icon button">
+          <i class="file icon"></i>
+          Choose file to upload
+        </label>
+        <input type="file" id="uploadfile" style="display:none" onChange={{action "uploadFile"}}>{{fileName}}
+      </div>
+      {{#if showErrorState}}
+        <div>
+          <ul class="list">
+            {{#each errorMessages as |errorMessage|}}
+              <li>{{errorMessage}}</li>
+            {{/each}}
+          </ul>
+        </div>
+      {{/if}}
+      {{nav-buttons sendChangeRoute="changeRoute" next="more-info" showError="showError" changeset=changeset}}
+    {{/with}}
   </div>
 </div>
