--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -17,30 +17,21 @@
           </div>
           <div class="field">
             <label> Data Source </label>
-            <div class="grouped fields" style="margin-left: 10px">
-              <div class="field">
-                {{ui-radio name="source" label="Provide a link to data" value="provide" current=source onChange=(action (mut source))}}
-              </div>
-              {{#if (eq source "provide")}}
-                <div class="eight wide field" style="margin-left: 20px">
-                  <div class="ui small labeled input">
-                    <div class="ui label">URL</div>
-                    <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
-                  </div>
+            <div class="inline sixteen wide fields">
+              <div class="six wide field">
+                <div class="ui small labeled input">
+                  <div class="ui label">URL</div>
+                  <input type="text" placeholder="URL for hosted data" onChange={{action "setURL"}}>
                 </div>
-              {{/if}}
-              <div class="field">
-                {{ui-radio name="source" label="Upload data" value="upload" current=source onChange=(action (mut source))}}
               </div>
-              {{#if (eq source "upload")}}
-                <div class="eight wide field" style="margin-left: 20px">
-                  <label for="uploadSource" class="ui small icon button">
-                    <i class="file icon"></i>
-                    Choose file to upload
-                  </label>
-                  <input type="file" id="uploadSource" onChange={{action "uploadFile"}} style="display:none"><b>{{fileName}}</b>
-                </div>
-              {{/if}}
+              <div class="or"> OR </div>
+              <div class="fluid field">
+                <label for="uploadSource" class="ui icon button">
+                  <i class="file icon"></i>
+                  Choose file to upload
+                </label>
+                <input type="file" id="uploadSource" onChange={{action "uploadFile"}} style="display:none">{{fileName}}
+              </div>
             </div>
           </div>
           <div class="field">
