testing: error message if no data source added

--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,4 +1,10 @@
 <div class="ui text container center aligned">
+  {{# if (eq dataSource false)}}
+    <div class="ui tiny message">
+      <div class="header"> Missing data source </div>
+      <p> In order to proceed, you must provide a link to the data or upload the data file </p>
+    </div>
+  {{/if}}
   <div class="ui icon negative mobile message">
     <i class="warning icon"></i>
     <div class="content">
