--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="intro">
-    <h3 class="first headroom">Welcome! {{help-modal submit=(action "changeRoute")}}</h3>
+    <h3 class="first headroom">Welcome! {{help-modal model=model submit=(action "changeRoute")}}</h3>
     <p>
       Provide link to data or upload data. (add information about accepted formats)
     </p>
