--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -27,6 +27,10 @@
   background-size: cover;
 }
 
+.ui.header {
+  font-family: 'Open Sans', sans-serif;
+}
+
 h1 {
   font-size: 48px !important;
 }
