modal doesn not show data source field if the model exists in record

--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -16,7 +16,7 @@
             <input type="text" name="email" placeholder="Email Address" onChange={{action "setEmail"}}>
           </div>
 
-          {{#unless (and model model.submission.data_url}}
+          {{#unless model}}
             <div class="field">
               <label> Data Source </label>
               <div class="inline sixteen wide fields">
