--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">Data format {{help-modal submit=(action "changeRoute")}}</h3>
+  <h3 class="first headroom">Data format {{help-modal model=model submit=(action "changeRoute")}}</h3>
   <p> <i> This is a small sample of the data for preview </i> </p>
   <div class="form-content">
     <div class="ui tiny message">
