--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom"> Review {{help-modal submit=(action "changeRoute")}}</h3>
+  <h3 class="first headroom"> Review {{help-modal model=model submit=(action "changeRoute")}}</h3>
   <div class="form-content">
     <div class="ui attached message">
       <h3 class="ui header">Data</h3>
