made upload button blue; show data source field in help modal only if no data source in model

--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -16,7 +16,7 @@
             <input type="text" name="email" placeholder="Email Address" onChange={{action "setEmail"}}>
           </div>
 
-          {{#unless model}}
+          {{#unless (or model.data_url model.data_file)}}
             <div class="field">
               <label> Data Source </label>
               <div class="inline sixteen wide fields">
