check license, attribution, frequency value on more-info route

--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -23,14 +23,14 @@
               <label> Add a license <span class="required"> * </span> </label>
               <div class="grouped fields">
                 <div class="field">
-                  {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut model.license))}}
+                  {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut licenseType))}}
                 </div>
                 <div class="field">
-                  {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut model.license))}}
+                  {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut licenseType))}}
                 </div>
               </div>
             </div>
-            {{#if (eq model.license "choose")}}
+            {{#if (eq licenseType "choose")}}
             <div class="required twelve wide field">
               <label> Choose a license </label>
               {{#ui-dropdown class="license selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
@@ -46,7 +46,7 @@
               {{/ui-dropdown}}
             </div>
             {{/if}}
-            {{#if (eq model.license "provide")}}
+            {{#if (eq licenseType "provide")}}
               <div class="required twelve wide field">
                 <label> Provide a link to license </label>
                 <input type="text" class="license" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
