--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,9 @@
 <div class="ui text container">
-  <h3 class="first headroom">Data format</h3>
+  <h3 class="first headroom">Data formatting</h3>
+    <!-- add link to OA explanation of  fields-->
+    <!-- https://github.com/openaddresses/openaddresses/blob/master/CONTRIBUTING.md#attribute-tags -->
+   <p>The table below shows the expected properties in the OpenAddresses database. Match the columns of the data you are contributing to this format as closely as possible.</p>
+   <p><i>Note: You can use Join columns or Split column to fit your data to this format.</i></p>
   <div class="form-content">
     <div class="ui tiny message">
       <p> <span class="required"> * </span> indicates field is <b> required </b> to proceed </p>
