--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,9 +8,9 @@
   <nav class="progress">
     <ul>
       <li class={{if (eq currentRouteName 'intro') "active"}}> 1. Data Source </li>
-      <li class={{if (eq currentRouteName 'more-info') "active"}}> 2. Data Information </li>
-      <li class={{if (eq currentRouteName 'data-format') "active"}}> 3. Column Mapping </li>
-      <li class={{if (eq currentRouteName 'contact') "active"}}> 4. Contact </li>
+      <li class={{if (eq currentRouteName 'more-info') "active"}}> 2. More Information </li>
+      <li class={{if (eq currentRouteName 'data-format') "active"}}> 3. Data Formatting </li>
+      <li class={{if (eq currentRouteName 'contact') "active"}}> 4. Contact Information </li>
       <li class={{if (eq currentRouteName 'review') "active"}}> 5. Review </li>
     </ul>
   </nav>
