--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -1,7 +1,7 @@
 <div class="ui text container">
   <h3 class="first headroom">More information</h3>
   <p>
-    We'll gather more info from the user about license/attribution/update frequency here.
+    Clear licensing information and data update frequency allows for the greatest number of people to use a dataset, so please provide as much detail as possible.
   </p>
   {{#with (changeset model InfoValidator) as |changeset|}}
     <div class="form-content">
@@ -11,7 +11,7 @@
       </div>
       <div class="ui form segment">
         <div class="required field">
-          <h4 class="ui dividing header">License information</h4>
+          <h4 class="ui dividing header">License</h4>
           <label>Does the data have a license?</label>
           <button class="ui compact button {{if (eq model.license_exists true) "active"}}" {{action "licenseExists" true}}>Yes</button>
           <button class="ui compact button none {{if (eq model.license_exists false) "active"}}" {{action "licenseExists" false}}>No</button>
@@ -23,7 +23,7 @@
               <label> Add a license <span class="required"> * </span> </label>
               <div class="grouped fields">
                 <div class="field">
-                  {{ui-radio name="license" label="Choose from license" value="choose" current=license onChange=(action (mut licenseType))}}
+                  {{ui-radio name="license" label="Choose from list of licenses" value="choose" current=license onChange=(action (mut licenseType))}}
                 </div>
                 <div class="field">
                   {{ui-radio name="license" label="Provide link to license" value="provide" current=license onChange=(action (mut licenseType))}}
@@ -34,7 +34,7 @@
             <div class="required twelve wide field">
               <label> Choose a license </label>
               {{#ui-dropdown class="license selection" selected=model.license onChange=(action "selectLicense") as | execute mapper|}}
-                <div class="default text">Licenses</div>
+                <div class="default text">Choose a license</div>
                 <i class="dropdown icon"></i>
                 <div class="menu">
                   {{#each licenses as | license |}}
@@ -49,7 +49,7 @@
             {{#if (eq licenseType "provide")}}
               <div class="required twelve wide field">
                 <label> Provide a link to license </label>
-                <input type="text" class="license" placeholder="www.sample.com..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
+                <input type="text" class="license" placeholder="http://..." value={{model.user_submitted_url}} onInput={{action "userSubmittedLicense"}}>
               </div>
             {{/if}}
           </form>
@@ -60,7 +60,7 @@
           </div>
         {{/if}}
         <div class="required field">
-          <label>Does the license require attribution?</label>
+          <label>Does the data require attribution?</label>
           <button class="ui compact button {{if (eq model.attribution true) "active"}}" {{action "setAttribution" true}}>Yes</button>
           <button class="ui compact button none {{if (eq model.attribution false) "active"}}" {{action "setAttribution" false}}>No</button>
           <button class="ui compact button none {{if (eq model.attribution "unknown") "active"}}" {{action "setAttribution" "unknown"}}>I don't know</button>
@@ -75,7 +75,7 @@
         <div class="field">
           <h4 class="ui dividing header">Data information</h4>
           <div class="required field">
-            <label>Frequency of update</label>
+            <label>Frequency of data update</label>
             {{#ui-dropdown class="selection" selected=model.update_frequency onChange=(action "setFrequency") as | execute mapper|}}
               <div class="default text">Frequency</div>
               <i class="dropdown icon"></i>
