start submission page layout

--- a/app/templates/success.hbs
+++ b/app/templates/success.hbs
@@ -1,1 +1,7 @@
-<h2 class="ui center aligned header center-text">Successful submission!</h2>
+<div class="ui text container">
+
+	<h2 class="ui center aligned header center-text">Success!</h2>
+
+	<p>Thank you for submitting data to OpenAddresses.</p>
+	<p>Next, the OpenAddresses team will review your submission and then import it into the OpenAddresses database. You can track the progress of your submission here [Link to GitHub PR]. You will be notified at the email address you provided when the import process is complete.</p>
+</div>
