--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -26,6 +26,5 @@
 <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Use postfix unit</button>
 {{/if}}
 
-<button class="ui button basic green" onClick={{action "extractionFunction" "removePrefixOrPostfix" field}}>Trim column</button>
-<button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
+<button class="ui small button basic green" onClick={{action "extractionFunction" "removePrefixOrPostfix" field}}>Trim column</button>
 
