--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -66,7 +66,7 @@
           <div class="data-functions">
             {{#unless (eq field "lon")}}
               {{#unless (eq field "lat")}}
-                <div class="function" onClick={{action "addFunction" field "join"}}>
+                <div class="function link-text" onClick={{action "addFunction" field "join"}}>
                   + Join columns
                 </div>
               {{/unless}}
@@ -77,7 +77,7 @@
                   {{#unless (eq field "postcode")}}
                     {{#unless (eq field "lon")}}
                       {{#unless (eq field "lat")}}
-                        <div class="function" onClick={{action "addFunction" field "split"}}>
+                        <div class="function link-text" onClick={{action "addFunction" field "split"}}>
                           - Split column
                         </div>
                       {{/unless}}
@@ -116,8 +116,6 @@
             {{remove-prefix-postfix field=field properties=properties model=model}}
           {{else if (eq properties.function "row_fxn_remove_postfix")}}
             {{remove-prefix-postfix field=field properties=properties model=model}}
-          {{else if properties.function}}
-            <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
           {{/if}}
           <div class="field nav-buttons">
             {{#unless (or (eq currentField "lat") (eq currentField "number"))}}
