added 150px margin-bottom to every page; styled placeholder and default text

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,6 +3,14 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body, p {
+  color: #444;
+}
+
+input:placeholder-shown {
+  color: #bfbfbf;
+}
+
 .ui.negative.message.mobile {
   display: none;
 }
@@ -70,6 +78,10 @@ h5 {
 
 .ui.warning.message {
   display: none;
+}
+
+.ui.text.container.flow {
+  margin-bottom: 150px;
 }
 
 .form-content {
