--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,4 +1,4 @@
-<div class="ui text container">
+<div class="ui text container flow">
   <h3 class="first headroom">Data format {{help-modal model=model.submission submit=(action "changeRoute")}} </h3>
   <p> This is a small sample of the data for preview </p>
   <div class="ui tiny message">
