--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -1,4 +1,4 @@
-<div class="ui text container">
+<div class="ui text container flow">
   <h3 class="first headroom">More information {{help-modal model=model submit=(action "changeRoute")}} </h3>
   <p>
     Clear licensing information and data update frequency allows for the greatest number of people to use a dataset, so please provide as much detail as possible.
