--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -1,4 +1,4 @@
-<div class="ui text container">
+<div class="ui text container flow">
   <h3 class="first headroom"> Review {{help-modal model=model submit=(action "changeRoute")}}</h3>
   <p>Submitting this form will create a pull request on GitHub to <a href="https://github.com/openaddresses/submit-service"> OpenAddresses repository</a>.</p>
   <div class="form-content">
