--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -22,7 +22,7 @@
             {{#unless (eq field "lat")}}
               <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>
                 {{#if (eq field "number")}}
-                  house number
+                  house <br/> number
                 {{else}}
                   {{field}}
                 {{/if}}
