capitalized attribution value; made edit links bold and same font size as table headers

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -311,6 +311,10 @@ nav ul li.active {
   padding: 10px 0px;
 }
 
+.info.attribution.value {
+  text-transform: capitalize;
+}
+
 .ui.fitted.divider {
   margin: 0px !important;
 }
@@ -324,7 +328,8 @@ nav ul li.active {
   position: absolute;
   right: 20px;
   cursor: pointer;
-  font-size: small;
+  font-weight: bold;
+  font-size: 1em;
 }
 
 .review.edit:hover {
