--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -47,7 +47,7 @@
           <div class="row">
             <div class="seven wide column">
               <div class="field label">Attribution</div>
-              <div class="info value">{{model.attribution}}</div>
+              <div class="info attribution value">{{model.attribution}}</div>
             </div>
             <div class="nine wide column">
               <div class="field label">Attribution Text</div>
