moved frequency up top and removed headers; made add license inputs connected to radio buttons

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -227,6 +227,10 @@ nav ul li.active {
   color: white;
 }
 
+.ui.selection.frequency {
+  margin-top: 5px;
+}
+
 /* styling for data format page */
 .data-functions {
   cursor: pointer;
