added opacity to unselected radio button

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -231,6 +231,14 @@ nav ul li.active {
   margin-top: 5px;
 }
 
+.ui.radio.checkbox {
+  opacity: 0.5;
+}
+
+.ui.radio.checkbox.checked {
+  opacity: 1;
+}
+
 /* styling for data format page */
 .data-functions {
   cursor: pointer;
