--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -104,8 +104,7 @@
             {{/if}}
           </label>
           {{#if showErrorState}}
-            <div class="ui hidden divider"></div>
-            <div class="ui tiny error message">
+            <div class="ui tiny negative message">
               <ul class="list">
                 {{#each errorMessages as |errorMessage|}}
                   <li>{{errorMessage}}</li>
