--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,10 +4,9 @@
     {{#if (eq currentRouteName 'success')}}
       <h1 class="ui inverted header">Success!</h1>
     {{else}}
-      <h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
+      <h1 class="ui inverted header">Contribute Data</h1>
     {{/if}}
   </div>
-  <div class="ui hidden divider"></div>
   {{#if (eq currentRouteName 'success')}}
     <nav class="progress">
       <ul>
