adding copy changes

--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -1,7 +1,7 @@
 <div class="ui text container flow">
   <h3 class="first headroom">More information</h3>
   <p>
-    We'll gather more info from the user about license/attribution/update frequency here.
+    Clear licensing information and data update frequency allows for the greatest number of people to use a dataset, so please provide as much detail as possible.
   </p>
   <div class="form-content">
     <div class="ui tiny message">
