--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">Data format {{help-modal model=model.submission submit=(action "changeRoute")}} </h3>
+  <h3 class="first headroom">Data format {{help-modal model=model.submission routeToSuccessPage=(action "routeToSuccessPage")}} </h3>
   <p> This is a small sample of the data for preview </p>
   <div class="ui tiny message">
     <p> <span class="required"> * </span> indicates field is <b> required </b> to proceed </p>
